--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,44 @@
 body {
   height: 100vh;
   width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   
+}
+.mainDiv {
+  height: 600px;
+  width: 600px;
+  border-radius: 20px;
+  background-image: linear-gradient(45deg,rgb(158, 216, 250),rgb(170, 248, 216));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px;
+  
+}
+form {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+ 
+
+}
+input {
+  height: 50px;
+  width: 400px;
+  text-align: center;
+  border-radius: 15px;
+  font-size: 1.2em;
+  
+
+}
+button{
+  height: 50px;
+  width: 50px;
+  border-radius: 15px;
+  background-color: white;
+  font-size: 1.3em;
+  color: rgb(78, 78, 78);
 }
